# USTC-Council-Bot

./: .env.example  Dockerfile  README.md
bot/src/: main.py
bot/src/cogs/: archive.py  listeners.py  motions.py  votes.py  weights.py
bot/src/db/: __init__.py
bot/src/utils/: checks.py  embeds.py  errors.py  parsing.py
dashboard/: auth.py
dashboard/routers/: __init__.py  archives.py
dashboard/static/: tailwind.css
dashboard/templates/: base.html  council.html  dashboard.html  motion.html
examples/: sample_export.json
tests/: test_api.py  test_config_validation.py
votum-bot/: pyproject.toml  requirements.txt
votum-bot/bot/src/cogs/: announcer.py  council.py
votum-bot/bot/src/db/: migrate.py  repo.py  schema.sql
votum-bot/bot/src/utils/: jsonschema.py  majority.py  oauth.py  time.py
votum-bot/dashboard/: app.py
votum-bot/dashboard/routers/: configs.py  councils.py  motions.py  votes.py
votum-bot/dashboard/templates/: archives.html  login.html
votum-bot/tests/: test_majority.py  test_repo.py
